src/objects/PBS_Wiki_Feeback__c.object
<CustomObject>
    <fields>
        <fullName>Wiki_Feedback__c</fullName>
        <label>Wiki Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wiki_ID__c</fullName>
        <label>Wiki ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wiki_Name__c</fullName>
        <label>Wiki Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PBS Wiki Feeback</label>
    <nameField>
        <displayFormat>PWF-{000000}</displayFormat>
        <label>PBS Wiki Feeback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS Wiki Feeback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>